# lfi-bench

./: .gitignore  IDEAS  Makefile  README.md  TODO  common.mk  hyperfine.py  install-lfi-prebuilt.sh  shield.sh  targets.mk
attic/lua/: README.md
attic/lua/results/aarch64/m2/: lfi-stores.csv  lfi.csv
attic/sqlite/: .gitignore  Makefile
brotli/: .gitignore  Makefile
coremark/: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  build.sh  download-source.sh
dav1d/: .gitignore  Makefile  README.md  bench.sh  build.sh  download-data.sh  download.sh
fdk-aac/: .gitignore  Makefile
freetype/: Makefile
freetype/benchmark/: CMakeLists.txt  benchmark.c
giflib/: .gitignore  Makefile
giflib/makefiles/: Makefile.lfi  Makefile.lfi-stores  Makefile.native
libavc/: Makefile
libexpat/: Makefile
libhevc/: .gitignore  Makefile
libjpeg-turbo/: .gitignore  Makefile  bench.sh  build.sh  download.sh
libjpeg-turbo-new/: Makefile
libjpeg-turbo-new/benchmark/: CMakeLists.txt  decode-benchmark.c  decode-benchmark.cpp
libjpeg-turbo-old/: Makefile.in  README.md
libjpeg-turbo/benchmark/: CMakeLists.txt  decode-benchmark.cpp
libjpeg-turbo/integrate/: .gitignore  Makefile  decode-benchmark.c  lib_helpers.c
libpng/: .gitignore  Makefile
libtiff/: Makefile
libvpx/: .gitignore  Makefile  README.md  bench.sh  build.sh
libwebp/: .gitignore  Makefile
libxml2/: Makefile
libxml2/benchmark/: CMakeLists.txt  xml-parse.c
libxml2/xml-examples/: README.md
lua/: .gitignore  Makefile  README.md  lua-makefile
lua/results/aarch64/m2/: plot.gp
opus/: .gitignore  Makefile  README.md  bench.sh  build.sh  download-data.sh  download-source.sh
results/: README.md  consolidate.go
results/aarch64/axion/: lfi-raw.csv  lfi-stores-raw.csv  lfi-stores.csv  lfi.csv  native-raw.csv  plot.gp
results/aarch64/m2/: lfi-raw.csv  lfi-stores-raw.csv  lfi-stores.csv  lfi.csv  native-raw.csv  plot.gp
results/aarch64/x1/: lfi-raw.csv  lfi-stores-raw.csv  lfi-stores.csv  lfi.csv  native-raw.csv  plot.gp
skia/: Makefile  decode-benchmark.cpp
spec2017/: README.md  aarch64-lfi-stores.csv  aarch64-lfi.csv  x86_64-lfi-stores.csv  x86_64-lfi.csv
sqlite/: Makefile  Makefile.in
toolchains/: aarch64-lfi-stores.cmake  aarch64-lfi-stores.txt  aarch64-lfi.cmake  aarch64-lfi.txt  aarch64-native.cmake  aarch64-native.txt  host.cmake
vpx/: README.md  bench.sh  download-data.sh  download-source.sh
zlib/: .gitignore  Makefile  README.md  bench.sh  build.sh  download-source.sh  gen-testdata.sh  meson.build
zlib/benchmark/: .CMakeLists.txt.swp  CMakeLists.txt  compress_file.c  decompress_file.c
zlib/integrate/: .gitignore  Makefile  compress_file.c  decompress_file.c  lib_helpers.c
zstd/: .gitignore  Makefile  README.md  bench.sh  build.sh  download-source.sh
